[package]
name = "csc372_project"
version = "0.1.0"
authors = ["Kitty Elliott <kitty@glitchcat.space>", "Jacob Rafko <jrafko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rotn"
path = "src/rot_n.rs"

[[bin]]
name = "avaca-doh"
path = "src/avaca-doh.rs"

# TODO
#[[bin]]
#name = "sieve"
#path = "src/sieve.rs"

[lib]
name = "sorts"
path = "src/sorts.rs"

[dependencies]
crossbeam-utils = "*"
rand = "*"